Troca de ilustração e cores

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ font-family: 'Aileron';
 }
 .dark .row-heading h2 span{
 /*color:#ff569c;*/
-color:#acaede;
+color:#A004C7;
 }
 .row-heading{
 margin-bottom:60px;
@@ -53,7 +53,7 @@ font-family: 'Aileron';
 text-align:center;
 }
 .row-heading h2 span{
-color:#acaede;
+color:#A004C7;
 }
 .row-heading p{
 color:#1d2a37;
@@ -75,7 +75,7 @@ Navigation Style Start
 ========================================================================== */
 nav.navbar.bootsnav {
 background-color:#000;
-border-bottom: 1px solid #acaede;
+border-bottom: 1px solid #A004C7;
 box-shadow:2px 2px 12px 0px rgba(0, 0, 0, 0.1);
 -webkit-box-shadow:2px 2px 12px 0px rgba(0, 0, 0, 0.1);
 -moz-box-shadow:2px 2px 12px 0px rgba(0, 0, 0, 0.1);
@@ -128,7 +128,7 @@ content:"";
 margin-top:5%;
 }
 .banner h1{
-color:#acaede;
+color:#A004C7;
 text-align:left;
 text-shadow:none;
 font-family: 'Aileron';
@@ -178,7 +178,7 @@ font-size: 18px;
 color:#ffffff;
 }
 .banner-btn i{
-color:#acaede;
+color:#A004C7;
 font-size:30px;
 margin-right:10px;
 float:left;
@@ -198,8 +198,8 @@ backface-visibility: hidden;
 -moz-osx-font-smoothing: grayscale;
 position: relative;
 padding:18px 34px;
-background:#acaede;
-border:2px solid #acaede;
+background:#A004C7;
+border:2px solid #A004C7;
 color:#ffffff;
 font-size:24px;
 border-radius:2px;
@@ -241,11 +241,11 @@ content:"";
 display:block;
 height:2px;
 width:110px;
-background:#acaede;
+background:#A004C7;
 }
 .features-caption span{
 font-size: 3.5em;
-color: #acaede;
+color: #A004C7;
 margin-bottom:10px;
 }
 .features-caption h3 {
@@ -279,7 +279,7 @@ height: 40px;
 float: left;
 font-size: 25px;
 margin-top: 5px;
-color: #acaede;
+color: #A004C7;
 }
 .service-content h4 {
 font-weight: 500;
@@ -314,13 +314,13 @@ padding: 15px 0;
 font-family: 'Aileron';
 /*font-family: 'Montserrat', sans-serif;*/
 font-size:25px;
-color:#acaede;
+color:#A004C7;
 }
 .active .prc-header h3{
-color:#acaede;
+color:#A004C7;
 }
 .prc-price {
-border: 3px solid #acaede;
+border: 3px solid #A004C7;
 text-align: center;
 width: 130px;
 height: 130px;
@@ -334,7 +334,7 @@ position: absolute;
 top: 15px;
 left:35%;
 font-size:55px;
-color: #acaede;
+color: #A004C7;
 opacity: 0.1;
 font-family: 'Aileron';
 /*font-family: 'Montserrat', sans-serif;*/
@@ -362,7 +362,7 @@ padding: 0;
 .pricing ul li {
 list-style: none;
 text-align: center;
-color: #acaede;
+color: #A004C7;
 line-height: 2;
 padding: 7px 0;
 font-family: 'Aileron';
@@ -373,12 +373,12 @@ padding: 12px 25px;
 color: #ffffff;
 text-transform: uppercase;
 margin: 20px 0;
-background: #acaede;
+background: #A004C7;
 font-family: 'Aileron';
 /*font-family: 'Montserrat', sans-serif;*/
 }
 .active button.btn.select-plan {
-background:#acaede;
+background:#A004C7;
 }
 
 /*----------------video section------------*/
@@ -423,13 +423,13 @@ font-size: 40px;
 width: 120px;
 height: 120px;
 border-radius: 50%;
-color: #acaede;
+color: #A004C7;
 line-height: 120px;
 vertical-align: middle;
 transition:all 0.4s;
 }
 a.video-btn:hover i{
-background:#acaede;
+background:#A004C7;
 color:#ffffff;
 }
 /*------------app screen-------------------*/
@@ -516,7 +516,7 @@ background:#fff;
 text-align:center;
 }
 .form-control{
-background:#acaede;
+background:#A004C7;
 border:1px solid #e3c6cb;
 height:50px;
 box-shadow:none !important;
@@ -535,8 +535,8 @@ height:120px;
 width: 100%;
 }
 .form-control:focus {
-border-color: #acaede;
-box-shadow: 0 1px 1px #acaede inset, 0 0 8px #acaede;
+border-color: #A004C7;
+box-shadow: 0 1px 1px #A004C7 inset, 0 0 8px #A004C7;
 outline: 0 none;
 }
 .btn-caption.submit {
@@ -544,8 +544,8 @@ margin-top: 0;
 padding: 1.2em 2.5em;
 border-radius: 1px;
 text-transform: uppercase;
-background: #acaede;
-border: 1px solid #acaede;
+background: #A004C7;
+border: 1px solid #A004C7;
 }
 .jx-contact-info ul {
 margin: 0;
@@ -669,10 +669,10 @@ background:#009ad2;
 background:#009ad2;
 }
 .footer-social-pro li.instagram a{
-background:#acaede;
+background:#A004C7;
 }
 .footer-social-pro li.instagram a i{
-background:#acaede;
+background:#A004C7;
 }
 .footer-social-pro li.pinterest a{
 background:#c12123;
@@ -688,17 +688,17 @@ display:block;
 }
 .footer-navi li{
 padding:0 12px;
-border-right:1px solid #acaede;
+border-right:1px solid #A004C7;
 display:inline-block;
 list-style:none;
 }
 .footer-navi li a {
-color:#acaede;
+color:#A004C7;
 font-family: 'Aileron';
 /*font-family: 'Montserrat', sans-serif;*/
 }
 .footer-widget-copy p {
-color: #acaede;
+color: #A004C7;
 margin:0;
 }
 .footer-widget-copy p a {
