--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-/*------------------------------------------------------------------
-Project:	Appley
-Version:	1.0
-Last change:	April 17 2018
-Primary use:	App Landing Page
--------------------------------------------------------------------*/
-
-/* ==========================================================================
-   Author's custom styles
-========================================================================== */
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,800');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
 /*---------------General style---------------*/
@@ -40,7 +30,7 @@ text-align:center;
 font-family: 'Aileron';
 }
 .dark .row-heading h2 span{
-/*color:#ff569c;*/
+/*color:#ff6a88;*/
 color:#A004C7;
 }
 .row-heading{
@@ -74,7 +64,7 @@ opacity:0.8;
 Navigation Style Start
 ========================================================================== */
 nav.navbar.bootsnav {
-background-color:#000;
+background-color:#f16480;
 border-bottom: 1px solid #A004C7;
 box-shadow:2px 2px 12px 0px rgba(0, 0, 0, 0.1);
 -webkit-box-shadow:2px 2px 12px 0px rgba(0, 0, 0, 0.1);
@@ -227,7 +217,7 @@ padding-right:30px;
 }
 .smart-header h1 {
 font-weight: 400;
-color: #425161;
+color: #A004C7;
 position:relative;
 padding-bottom:10px;
 font-family: 'Aileron';
@@ -241,7 +231,7 @@ content:"";
 display:block;
 height:2px;
 width:110px;
-background:#A004C7;
+background:#ffe16b;
 }
 .features-caption span{
 font-size: 3.5em;
@@ -469,7 +459,7 @@ padding: 0 20px;
 }
 
 .btn.next i {
-background: #ff569c;
+background: #ff6a88;
 border-radius: 100%;
 display: inline-block;
 float: unset;
@@ -480,10 +470,10 @@ padding: 0;
 color:#ffffff;
 text-align: center;
 width: 32px;
-border:3px solid #ff569c;
+border:3px solid #ff6a88;
 }
 .btn.prev i {
-background: #ff569c;
+background: #ff6a88;
 border-radius: 100%;
 display: inline-block;
 float: unset;
@@ -494,7 +484,7 @@ line-height: 24px;
 padding: 0;
 text-align: center;
 width: 32px;
-border:3px solid #ff569c;
+border:3px solid #ff6a88;
 }
 .owl-controls.clickable{
 display:none;
@@ -516,13 +506,34 @@ background:#fff;
 text-align:center;
 }
 .form-control{
-background:#A004C7;
-border:1px solid #e3c6cb;
+background: #ffe16b;
+border:1px solid #ffe16b;
 height:50px;
 box-shadow:none !important;
 border-radius:2px !important;
 display:inline-block;
 color:#ffffff;
+border-radius: 10%;
+}
+
+::-webkit-input-placeholder {
+    color: orange;
+    font: 12px verdana, arial, sans-serif;
+}
+
+:-moz-placeholder {
+    color: orange;
+    font: 12px verdana, arial, sans-serif;
+}
+
+::-moz-placeholder {
+    color: orange;
+    font: 12px verdana, arial, sans-serif;
+}
+
+:-ms-input-placeholder {
+    color: orange;
+    font: 12px verdana, arial, sans-serif;
 }
 
 .form-bott{
@@ -530,6 +541,7 @@ margin-bottom:15px;
 }
 textarea.form-control{
 height:120px;
+border-radius: 10%;
 }
 .input-group {
 width: 100%;
@@ -538,6 +550,7 @@ width: 100%;
 border-color: #A004C7;
 box-shadow: 0 1px 1px #A004C7 inset, 0 0 8px #A004C7;
 outline: 0 none;
+border-radius: 10px 20px;
 }
 .btn-caption.submit {
 margin-top: 0;
@@ -557,7 +570,7 @@ list-style:none;
 margin:0;
 }
 .jx-contact-info .icon {
-border: 1px solid #ff569c;
+border: 1px solid #ff6a88;
 border-radius: 50%;
 height: 66px;
 margin-top: 4px;
@@ -570,7 +583,7 @@ position: absolute;
 text-align: center;
 }
 .jx-contact-info i {
-color: #ff569c;
+color: #ff6a88;
 padding: 0;
 line-height: 65px !important;
 }
@@ -697,12 +710,12 @@ color:#A004C7;
 font-family: 'Aileron';
 /*font-family: 'Montserrat', sans-serif;*/
 }
-.footer-widget-copy p {
+/* .footer-widget-copy p {
 color: #A004C7;
 margin:0;
-}
-.footer-widget-copy p a {
-color: #ff569c;
+} */
+.footer-widget-copy {
+color: #ff6a88;
 }
 
 
