--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,11 @@ display: inline-block;
 zoom: 1;
 display: none;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+}
 /*---------------contact form----------------*/
 .address{
 margin-bottom:3em;
