lado a lado - depoimento

--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ a.video-btn:hover i {
   text-align: center;
 }
 .form-control {
-  background: #ffe16b;
+  background: pink;
   border: 1px solid #ffe16b;
   height: 50px;
   box-shadow: none !important;
